fix(theme): avoid vertial middle align for tables

--- a/custom/less/section-docs.less
+++ b/custom/less/section-docs.less
@@ -129,7 +129,6 @@ body {
       padding: 8px 13px;
       border-bottom: @table-border;
       border-left: @table-border;
-      vertical-align: top;
     }
 
     th {
